fix: harden player API with conflict checks, exception handling, and tests
Co-authored-by: Cursor <cursoragent@cursor.com>